# planora

./: .env.sample  .gitignore  README.md  biome.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
api/: Cargo.toml  package.json
api/migrations/: 00000000000002_common.down.sql  00000000000002_common.up.sql  20251027093809_users.down.sql  20251027093809_users.up.sql  20251103050830_plans_features.down.sql  20251103050830_plans_features.up.sql  20251103050836_organizations.down.sql  20251103050836_organizations.up.sql  20251103123426_projects.down.sql  20251103123426_projects.up.sql  20251110142344_tasks.up.sql  20251119043934_spaces.down.sql  20251119043934_spaces.up.sql  20251203165422_spaces.up.sql  20251203165433_projects.down.sql  20251203165433_projects.up.sql  20260127171448_resources_acl.down.sql  20260127171448_resources_acl.up.sql  20260215160639_workspace.down.sql  20260215160639_workspace.up.sql  20260215163304_project.down.sql  20260215163304_project.up.sql
api/src/: doc.rs  lib.rs  main.rs
api/src/bootstrap/: app.rs  mod.rs  services.rs
api/src/bootstrap/config/: config.rs  mod.rs  profile.rs
api/src/common/: error.rs  headers.rs  mod.rs  response.rs  utils.rs
api/src/components/: mod.rs
api/src/components/project/: handlers.rs  model.rs  repo.rs
api/src/components/user/: handlers.rs  mod.rs  model.rs  repo.rs
api/src/components/workspace/: handlers.rs  model.rs  repo.rs
api/src/config/: config.rs  mod.rs  observability.rs  telemetry.rs
api/src/context/: tenant.rs
api/src/db/: mod.rs
api/src/db/dto/: mod.rs  organization.rs  user.rs
api/src/db/models/: mod.rs  organization.rs  project.rs  space.rs  task.rs  user.rs
api/src/db/repos/: mod.rs  org_repo.rs  space_repo.rs  user_repo.rs
api/src/middlewares/: auth.rs  auth_middleware.rs  mod.rs  tenant.rs
api/src/modules/: mod.rs
api/src/modules/organization/: dto.rs  repo.rs
api/src/modules/project/: dto.rs  model.rs  repo.rs
api/src/modules/space/: dto.rs  mod.rs  model.rs  repo.rs
api/src/modules/user/: dto.rs  repo.rs
api/src/routes/v1/: mod.rs
api/src/services/: mod.rs
api/src/services/auth/: jwt.rs  mod.rs  service.rs
api/src/services/cache/: service.rs
api/src/services/db/: error.rs  mod.rs  pg.rs  pg_service.rs  service.rs
api/src/services/mail/: mod.rs  service.rs
api/src/services/s3/: error.rs  mod.rs  service.rs
api/src/telemetry/: mod.rs  telemetry.rs
api/src/test_suite/: mod.rs
(+140 files in other folders)
