[package]
name = "arx-gatehouse"
version = "0.1.0"
authors = ["sajeevan"]
edition.workspace = true
license.workspace = true
default-run = "arx-gatehouse"

[[bin]]
name = "arx-gatehouse"
path = "src/main.rs"

[dependencies]

# web framework
actix-web = { version = "4" }
actix-cors = "0.7"
actix-ws = "0.3.0"
actix-multipart = "0.7.2"

# database
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "postgres",
    "macros",
    "ipnetwork",
    "uuid",
    "chrono",
    "rust_decimal",
] }
sea-query = { version = "0.32.7", default-features = false, features = [
    "derive",
    "backend-postgres",
    "all-types",
] }
deadpool-redis = "0.22.0"

# storage bucket
aws-config = { version = "1.8.12", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.117.0"

# smtp
lettre = { version = "0.11.19", default-features = false, features = [
    "builder",
    "smtp-transport",
    "tokio1-native-tls",
] }

# async / runtime
tokio = { version = "1.48.0", features = ["sync", "signal"] }
futures-util = "0.3.31"
futures = "0.3.31"
async-trait = "0.1.89"

# serialization
serde = "1.0.228"
serde_json = "1.0.146"

# observability
tracing = { version = "0.1.4", features = ["std"] }
tracing-subscriber = { version = "0.3.2", features = [
    "env-filter",
    "fmt",
    "json",
    "std",
    "registry",
] }
opentelemetry = { version = "0.31.0", features = ["trace", "metrics", "logs"] }
opentelemetry_sdk = { version = "0.31.0", features = [
    "trace",
    "metrics",
    "logs",
] }
opentelemetry-otlp = { version = "0.31.0", features = [
    "grpc-tonic",
    "trace",
    "metrics",
    "logs",
    "internal-logs",
] }
opentelemetry-appender-tracing = "0.31.1"
opentelemetry-semantic-conventions = "0.31.0"
tracing-opentelemetry = "0.32.0"
opentelemetry-instrumentation-actix-web = { version = "0.23.0", features = [
    "metrics",
] }

# auth
oauth2 = "4.4.2"
jsonwebtoken = { version = "10.1.0", features = ["rust_crypto"] }

# documentation
utoipa = { version = "5.4.0", features = [
    "actix_extras",
    "yaml",
    "chrono",
    "uuid",
    "decimal",
] }
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }

# misc
thiserror = "2.0.17"
dotenvy = "0.15"
chrono = { version = "0.4.42", features = ["serde"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
url = "2.5.7"
once_cell = "1.21.3"
uaparser = "0.6.4"
